Fix scroll which is invisible before page isn't be loaded

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -2,7 +2,6 @@
 	background: $bc;
 	display: flex;
 	justify-content: center;
-	height: 1000px;
 	display: none;
 }
 
